# wallet_wall

./: pyproject.toml
app/: 1.txt  __init__.py  config.py  test.py  wall.py
app/result_data/: result.txt
app/templates/: enter_info.html  wall.html
