[tool.poetry]
name = "wallet-wall"
version = "0.1.0"
description = ""
authors = ["Kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "wallet_wall"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
bs4 = "^0.0.1"
flask-bootstrap = "^3.3.7.1"
flask-wtf = "^1.0.1"
wtforms = "^3.0.1"
selenium = "^4.6.0"
undetected-chromedriver = "^3.1.6"
fake-useragent = "^0.1.14"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
